# HRI

./: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
docs/html/: annotated.xhtml  classes.xhtml  dir_68267d1309a1af8e8297ef4c3efbcdba.xhtml  dir_d44c64559bbebec7f509842c48db8b23.xhtml  files.xhtml  functions.xhtml  functions_func.xhtml  functions_vars.xhtml  graph_legend.xhtml  index.xhtml  pages.xhtml
docs/html/d0/d30/: md_README.xhtml
docs/html/d1/d9a/: classAOnode-members.xhtml
docs/html/d1/dbb/: classCallBackClass.xhtml
docs/html/d1/dd0/: classPath-members.xhtml
docs/html/d1/dec/: classCallBackClass__coll__graph.map  classCallBackClass__coll__graph.md5
docs/html/d2/d3a/: aonode_8h_source.xhtml
docs/html/d2/d9b/: hri_8cpp_source.xhtml
docs/html/d3/d14/: endorAction_8hpp_source.xhtml
docs/html/d3/df1/: CallBackClass_8hpp_source.xhtml
docs/html/db/dc7/: classPath.xhtml
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  pages_0.js  search.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
include/: aograph.cpp  aonode.h
src/: CallBackClass.cpp  CallBackClass.hpp  CallBackClass.hpp~  aograph.h~  cognitionClass.cpp  cognitionClass.hpp  cognitionClass.hpp~  endorAction.cpp  endorAction.cpp~  endorAction.hpp  endorAction.hpp~  hri.cpp  hri.cpp~
src/endor/: aograph.cpp  aograph.cpp~  aograph.h  aograph.h~  aonode.cpp
(+24 files in other folders)
